[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm-siv = "0.11.*"
base64 = "0.*"
serde = "1.*"
serde_bytes = "0.*"
slice_as_array = "1.*"
uuid = { version = "*", features = ["v4", "serde"] }